@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-12T01:10:09Z",
+  "timestamp" : "2022-05-12T08:17:18Z",
   "count_outdated" : 17,
   "uniques_outdated" : 11,
-  "count" : 89,
-  "uniques" : 55,
+  "count" : 96,
+  "uniques" : 61,
   "clones" : [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-12T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 0, 7 ],
+      "uniques": 6,
+      "uniques_minmax": [ 0, 6 ]
     }
   ]
 }
