@@ -1,6 +1,6 @@
 {
-  "count": 72,
-  "uniques": 18,
+  "count": 79,
+  "uniques": 19,
   "clones": [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2022-05-11T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-12T00:00:00Z",
+      "count": 7,
+      "uniques": 6
     }
   ]
 }
