@@ -1,3 +1,9 @@
+2022-05-12T08:17:18Z:
+* notice: last 14d: all unq: 79 19
+* notice: prev accum: outdated-all outdated-unq / all unq: 17 11 / 89 55
+* notice: next accum: outdated-all outdated-unq / all unq: 17 11 / 96 61
+* notice: prev json diff / prev day diff: unq all: +6 +7 -0 -0 / +7 +9 -0 -0
+
 2022-05-12T01:10:09Z:
 * notice: last 14d: all unq: 72 18
 * notice: prev accum: outdated-all outdated-unq / all unq: 17 11 / 87 54
